<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <TextView
        android:id="@+id/textView_autenticacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/label_usuario_cadastro" />
    
    <EditText
        android:id="@+id/editText_usuario_nome"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_usuario_nome"
        android:layout_alignBottom="@+id/textView_usuario_nome"
        android:layout_toRightOf="@+id/textView_usuario_nome"
        android:inputType="textPersonName"
        android:layout_marginLeft="5dp" >

        <requestFocus />

    </EditText>
    
    <TextView
        android:id="@+id/textView_usuario_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_autenticacao"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/input_usuario_nome" />

    <TextView
        android:id="@+id/textView_usuario_dataDeNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_usuario_nome"
        android:layout_below="@+id/editText_usuario_nome"
        android:layout_marginTop="28dp"
        android:text="@string/input_usuario_dataDeNascimento" />


    <DatePicker
        android:id="@+id/datePicker_usuario_dataDeNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_usuario_dataDeNascimento"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:calendarViewShown="false" />

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker_usuario_dataDeNascimento"
        android:layout_centerHorizontal="true"
        android:text="@string/button_salvar" />

</RelativeLayout>